--- a/app/src/main/res/layout/activity_first_screen.xml
+++ b/app/src/main/res/layout/activity_first_screen.xml
@@ -8,58 +8,56 @@
     android:background="@android:color/white">
 
     <android.support.design.widget.FloatingActionButton
-        android:layout_width="match_parent"
-        android:clickable="true"
-        android:src="@android:drawable/ic_menu_preferences"
         android:id="@+id/floatSettings"
-        android:layout_marginBottom="46dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="300dp"
-        android:layout_height="match_parent"
-        android:scaleType="fitCenter"
-        app:fabSize="normal"
-        android:background="@android:color/holo_green_dark" />
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="match_parent"
-        android:clickable="true"
-        android:src="@android:drawable/ic_menu_gallery"
-        android:id="@+id/floatingGallery"
-        android:layout_marginBottom="118dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="300dp"
-        android:layout_height="match_parent"
-        android:scaleType="fitCenter"
-        app:fabSize="normal"
+        android:layout_marginBottom="39dp"
+        android:layout_marginStart="300dp"
         android:background="@android:color/holo_green_dark"
-        />
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="match_parent"
         android:clickable="true"
-        android:src="@android:drawable/ic_menu_camera"
-        android:id="@+id/floatingCamera"
-        android:layout_marginBottom="190dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="300dp"
-        android:layout_height="match_parent"
         android:scaleType="fitCenter"
-        app:fabSize="normal"
-        android:background="@android:color/holo_green_dark"
+        android:src="@android:drawable/ic_menu_preferences"
+        app:fabSize="normal" />
 
-        />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingGallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/floatSettings"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="19dp"
+        android:layout_marginStart="300dp"
+        android:background="@android:color/holo_green_dark"
+        android:clickable="true"
+        android:scaleType="fitCenter"
+        android:src="@android:drawable/ic_menu_gallery"
+        app:fabSize="normal" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingCamera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/floatingGallery"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="14dp"
+        android:layout_marginStart="300dp"
+        android:background="@android:color/holo_green_dark"
+        android:clickable="true"
+        android:scaleType="fitCenter"
+        android:src="@android:drawable/ic_menu_camera"
+        app:fabSize="normal" />
 
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:contentDescription="Snap Logo"
-        android:cropToPadding="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/snaphr" />
+        android:cropToPadding="false"
+        android:scaleType="fitXY"
+        android:src="@drawable/otbackground" />
 
 </RelativeLayout>
